# CamelBones

./: changes-1.1.1.txt  changes-1.1.2.txt  index.html
CamelBones/: AppKitGlobalStrings.plist.in  AppMain.h  AppMain.m  CBPerl.h  CBPerl.m  CBPerlArray.m  CBPerlArrayInternals.h  CBPerlHash.h  CBPerlHash.m  CBPerlHashInternals.h  CBPerlObject.m  CBPerlObjectInternals.h  CBPerlObjectInternals.m  CBPerlScalar.m  CBPerlScalarInternals.h  CBPerlScalarInternals.m  CamelBonesInfo.plist  ChangeLog  Conversions.m  Conversions_real.h  DylibInit.m  FoundationGlobalStrings.plist.in  GNUmakefile  GNUmakefile.conf.in  GNUmakefile.ffcall  GNUmakefile.files  GNUmakefile.gnustep  GNUmakefile.macosx  GNUmakefile.perl  Globals.m  Globals_real.h  Info.plist  NativeMethods.m  NativeMethods_real.h  PerlImports.h  PerlMethods.h  PerlMethods.m  PerlMethods_real.h  PluginInfo-5.10.0.plist  PluginInfo-5.8.1.plist  (+27 more)
CamelBones/AppKit/: Functions.pm
CamelBones/CPAN/: CamelBones.xs  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README  cb_common.pl  ppport.h
CamelBones/CPAN/AppKit/: AppKit.xs  Makefile.PL
CamelBones/CPAN/Foundation/: Foundation.xs  Makefile.PL
CamelBones/CPAN/Tests/: CBExceptionTests.c  CBPropertyTests.c  CBPropertyTests.h  CBStructureTests.c  CBStructureTests.h  CBStructureTests.m  CBSuper.c  CBSuper.h  CBThreadTests.c  Makefile.PL  Tests.xs
CamelBones/CPAN/lib/: CamelBones.pm
CamelBones/CPAN/lib/CamelBones/: AppKit.pm  Foundation.pm  Tests.pm
CamelBones/CPAN/t/: 00-CamelBones.t  01-Functions.t  02-Conversions.t  03-Memory.t  04-Pointers.t  05-Structures.t  10-NSString.t  11-NSArray.t  11-NSDictionary.t  12-NSNumber.t  13-Exceptions.t  14-Threads.t  15-Subclassing.t  20-PerlObject.t  21-Properties.t  30-BundleLoader.t
CamelBones/CamelBones.xcodeproj/: project.pbxproj  sherm.pbxuser  sherm.perspectivev3
CamelBones/English.lproj/: InfoPlist.strings
CamelBones/Foundation/: Functions.pm
CamelBones/PAR/CPAN/: MyConfig.pm
CamelBones/libffi/: prep_cif.c  types.c
CamelBones/libffi-15/libffi.xcodeproj/: project.pbxproj  sherm.pbxuser  sherm.perspectivev3
CamelBones/libffi-15/powerpc/: ppc-ffi_darwin.c
CamelBones/libffi/include/: ffi.h  ffi_common.h  fficonfig.h  ffitarget.h  ppc-ffitarget.h  x86-ffitarget.h
CamelBones/libffi/libffi.xcodeproj/: blake.mode2  blake.pbxuser  project.pbxproj  sherm.pbxuser  sherm.perspective
CamelBones/libffi/powerpc/: ppc-darwin.S  ppc-darwin_closure.S  ppc-ffi_darwin.c
CamelBones/libffi/tests/: dejagnu.py
Examples/BrowserSample/: Info.plist  MyWindowController.pm  main.m
Examples/CamelWriter/: Info.plist  MyDocument.pm  main.m  main.pl
Examples/ControllerInNib/: ControllerInNib.pm  Info.plist  main.m  main.pl
Examples/Currency Converter/: Info.plist  MyController.pm  WindowController.pm  (+2 more)
ExtLibs/: readme.txt
IcebergProjects/: CamelBones.packproj  PAR Kits.packproj  Perl SDKs.packproj
PerlSDKs/: readme.txt
ShuX/: AppDelegate.pm  BrowserController.pm  CamelBones.plist  Icon.tiff  Info.plist  MutableTransformer.h  MutableTransformer.m  MyDocument.pm  PrefController.pm  ShuX.icns  ShuXParser.pm  TipController.pm  Tips.txt  intro.pod  main.m  main.pl
WebSite/: contact.html  copyright.html  index.html
original_website/: contact.html  copyright.html  index.html
(+281 files in other folders)
